fix extra padding on add new row cell editor

--- a/backend/src/public/css/components/_fuse-select.scss
+++ b/backend/src/public/css/components/_fuse-select.scss
@@ -8,7 +8,7 @@
   @extend .my-1;
   @extend .d-none;
   @extend .hide-scrollbar;
-  max-height: 25vh;
+  max-height: 140px;
   cursor: pointer;
 
   &.active {
